# omega

./: .gitignore  AGI.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  OMEGA.md  OMEGA_POLISH.md  README.md  SPECS.md  WHITEPAPER.md  com.ilozada.omega.plist  config.example.toml  flake.nix  install.sh
backend/: Cargo.toml  config.example.toml
backend/crates/omega-channels/: Cargo.toml
backend/crates/omega-channels/src/telegram/: polling.rs  send.rs
backend/crates/omega-channels/src/whatsapp/: channel.rs  events.rs  mod.rs
backend/crates/omega-channels/src/whatsapp_store/: mod.rs  protocol_store.rs
docs/: DOCS.md  agent-functionalities.md  agentic-tools.md  api.md  architecture.md  cargo-lock.md  cargo-toml-root.md  channels-cargo-toml.md  channels-lib.md  channels-telegram.md  channels-whatsapp.md  claude-md.md  claude-settings-local.md  claudemd.md  config-example-toml.md  core-cargo-toml.md  core-config.md  core-context.md  core-error.md  core-lib.md  core-message.md  core-sanitize.md  core-traits.md  gitignore.md  heartbeat.md  introspection.md  license.md  memory-audit.md  memory-cargo-toml.md  memory-lib.md  memory-migration-001.md  memory-migration-002.md  memory-migration-003.md  memory-migration-004.md  memory-migration-005.md  memory-migration-007.md  memory-migration-009.md  memory-migration-010.md  memory-migration-011.md  memory-migration-013.md  (+27 more)
prompts/: SYSTEM_PROMPT.md  WELCOME.toml  WORKSPACE_CLAUDE.md
specs/: SPECS.md  cargo-lock.md  cargo-toml-root.md  channels-cargo-toml.md  channels-lib.md  channels-telegram.md  channels-whatsapp.md  (+71 more)
(+259 files in other folders)
