[package]
name = "omega-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Messaging platform integrations for Omega"

[dependencies]
omega-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
whatsapp-rust = { git = "https://github.com/jlucaso1/whatsapp-rust", rev = "e5cb564", default-features = false, features = ["tokio-transport", "ureq-client", "tokio-native"] }
whatsapp-rust-tokio-transport = { git = "https://github.com/jlucaso1/whatsapp-rust", rev = "e5cb564" }
whatsapp-rust-ureq-http-client = { git = "https://github.com/jlucaso1/whatsapp-rust", rev = "e5cb564" }
wacore = { git = "https://github.com/jlucaso1/whatsapp-rust", rev = "e5cb564" }
wacore-binary = { git = "https://github.com/jlucaso1/whatsapp-rust", rev = "e5cb564" }
waproto = { git = "https://github.com/jlucaso1/whatsapp-rust", rev = "e5cb564" }
sqlx = { workspace = true }
bincode = "1"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
